feat: upgrade libraries dependencies
