# docs/swagger.json
@@ -51,7 +51,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "health-check"
                 ],
                 "summary": "HandleHealthCheck handler to health-check re4quest",
                 "responses": {
@@ -67,6 +67,9 @@
         "/signin": {
             "post": {
                 "description": "sign in as a member",
+                "tags": [
+                    "accounts"
+                ],
                 "parameters": [
                     {
                         "type": "string",
