# server/handlers/handlers.go
@@ -5,14 +5,14 @@ import (
 )
 
 // HandleHealthCheck handler to health-check request
-// @Summary  HandleHealthCheck handler to health-check re4quest
+// @Summary HandleHealthCheck handler to health-check re4quest
 // @Schemes
 // @Description health-check end point to return the healthy status of API.
-// @Tags example
-// @Accept json
-// @Produce json
-// @Success 200 {string} OK
-// @Router /health-check [get]
+// @Tags        health-check
+// @Accept      json
+// @Produce     json
+// @Success     200 {string} OK
+// @Router      /health-check [get]
 func HandleHealthCheck(c *gin.Context) {
 	a := APIHandler{c}
 	a.String(200, "OK")
